--- a/_posts/2019-8-28-Kmeans.markdown
+++ b/_posts/2019-8-28-Kmeans.markdown
@@ -4,7 +4,7 @@ title:      "Kmeans"
 subtitle:   " \"Kmeans 原理以及简易实现\""
 date:       2019-08-28 12:00:00
 author:     "Givyuscss"
-header-img: "img/post-bg-2015.jpg"
+header-img: "img/post-bg-js-module.jpg"
 tags:
     - Machine Learning
 ---
